# petapda

./: .clangd  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  flake.nix  main.c
lua/: CMakeLists.txt
src/: debug.c  debug.h  main.c  sdcard.c  sdcard.h
src/7segment/: 7segment.c  7segment.h  README.md
src/dev/: eink.c  eink.h  joystick.c  joystick.h  sdcard.c  sdcard.h
src/fs/: README.md  diskio.c  ffconf.h  ffsystem.c
src/gfx/: font.h  screen.c  screen.h
src/ili9341/: ili9341.c  ili9341.h
src/lua/: joystick.c  joystick.h  screen.c  screen.h
src/os/: fs.c  fs.h
src/st7789/: README.md  st7789.c
src/sys/: bus.c  bus.h
src/touch/: calibration.c  calibration.h  xpt2046.c  xpt2046.h
